Ability to reset market prices
